# rc

./: .gitignore  CMakeLists.txt  README.md  build.sh  test.sh
include/: channel.hpp  client.hpp  managers.hpp  relay_chat.hpp  server.hpp  thread_pool.hpp  utilities.hpp
src/: channel.cpp  client.cpp  main.cpp  managers.cpp  relay_chat.cpp  server.cpp  utilities.cpp
test/: load_test.cpp  main.cpp
